chore: :wrench: Move arquivo `profile.yml`.

--- a/.env.exemplo
+++ b/.env.exemplo
@@ -1,5 +1,7 @@
 # Exemplo de arquivo com variáveis de ambiente
 
+DBT_PROFILES_DIR="."
+
 # Credenciais de acesso ao banco analítico
 BD_ANALITICO_SERVIDOR = "127.0.0.1"
 BD_ANALITICO_USUARIO = maria
