--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "files.associations":{  
        "*.sql": "jinja-sql",
        "**/target/**": ""
-    }
+    },
+    "dbt.runModelCommandAdditionalParams": [
+        "--profiles-dir ."
+    ]
 }
