--- a/.env.exemplo
+++ b/.env.exemplo
@@ -3,11 +3,11 @@
 DBT_PROFILES_DIR="."
 
 # Credenciais de acesso ao banco analítico
-BD_ANALITICO_SERVIDOR = "127.0.0.1"
-BD_ANALITICO_USUARIO = maria
-BD_ANALITICO_SENHA = minha-senha-muito-longa-e-complexa
+DBT_ENV_SECRET_ANALITICO_SERVIDOR="127.0.0.1"
+DBT_ENV_SECRET_ANALITICO_USUARIO=maria
+DBT_ENV_SECRET_ANALITICO_SENHA=minha-senha-muito-longa-e-complexa
 
 # Credenciais de acesso ao banco de produção
-BD_PRODUCAO_SERVIDOR = "0.0.0.0"
-BD_PRODUCAO_USUARIO = joao
-BD_PRODUCAO_SENHA = uma-outra-senha-ainda-mais-complexa-e-dificil
+DBT_ENV_SECRET_PRODUCAO_SERVIDOR="0.0.0.0"
+DBT_ENV_SECRET_PRODUCAO_USUARIO=joao
+DBT_ENV_SECRET_PRODUCAO_SENHA=uma-outra-senha-ainda-mais-complexa-e-dificil
