chore: :page_facing_up: Adiciona cabeçalhos de licença e gatilho para checagem com padrão REUSE.

--- a/.dbt_coves.yml
+++ b/.dbt_coves.yml
@@ -1,3 +1,8 @@
+# SPDX-FileCopyrightText: 2022 Impulso Gov <contato@impulsogov.org>
+#
+# SPDX-License-Identifier: MIT
+
+
 # For more information on this file, visit https://github.com/datacoves/dbt-coves
 
 generate:
