--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# SPDX-FileCopyrightText: 2022 Impulso Gov <contato@impulsogov.org>
+#
+# SPDX-License-Identifier: MIT
+
+
 # dbt
 target/
 dbt_modules/
