--- a/.sqlfluffignore
+++ b/.sqlfluffignore
@@ -1,3 +1,8 @@
+# SPDX-FileCopyrightText: 2022 Impulso Gov <contato@impulsogov.org>
+#
+# SPDX-License-Identifier: MIT
+
+
 target/
 dbt_modules/
 macros/
