--- a/profiles.yml
+++ b/profiles.yml
@@ -1,3 +1,8 @@
+# SPDX-FileCopyrightText: 2022 Impulso Gov <contato@impulsogov.org>
+#
+# SPDX-License-Identifier: MIT
+
+
 impulso-saude-mental:
     target: analitico
     outputs:
