--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,8 @@
+# SPDX-FileCopyrightText: 2022 Impulso Gov <contato@impulsogov.org>
+#
+# SPDX-License-Identifier: MIT
+
+
 [tool.poetry]
 name = "impulsosm_indicadores"
 version = "0.1.0"
