--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,6 @@ repos:
   rev: v1.0.0
   hooks:
   - id: dbt-compile
-  - id: dbt-docs-generate
   - id: check-source-table-has-description
   - id: check-script-semicolon
   - id: check-script-has-no-table-name
@@ -17,10 +16,9 @@ repos:
   - id: check-model-has-all-columns
   - id: check-model-has-description
     files: ^models/
-
   # Checar se arquivos atendem às especificações REUSE para padronização de
   # informações sobre licenças
-  - repo: https://github.com/fsfe/reuse-tool
-    rev: latest
-    hooks:
-      - id: reuse
+- repo: https://github.com/fsfe/reuse-tool
+  rev: v1.0.0
+  hooks:
+    - id: reuse
