--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python = ">=3.8, <3.10"
 dbt-postgres = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
+pre-commit = "^2.19.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
