--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,22 +9,22 @@ on:
   push:
     branches:
       - main
-      - master
   pull_request:
     branches:
       - main
-      - master
 
 jobs:
   build:
     name: Main CI
     runs-on: ubuntu-latest
     env:
-      DBT_USER: ${{ secrets.DBT_PROD_USER }}
-      DBT_PASSWORD: ${{ secrets.DBT_PROD_PASSWORD }}
-      DBT_DATABASE: ${{ secrets.DBT_PROD_DATABASE }}
-      DBT_PROFILES_DIR: .config
-      DBT_REDSHIFT_ACCOUNT: ${{ secrets.DBT_REDSHIFT_ACCOUNT }}
+      DBT_ENV_SECRET_ANALITICO_USUARIO: ${{ secrets.DBT_ENV_SECRET_ANALITICO_USUARIO }}
+      DBT_ENV_SECRET_ANALITICO_SENHA: ${{ secrets.DBT_ENV_SECRET_ANALITICO_SENHA }}
+      DBT_ENV_SECRET_ANALITICO_SERVIDOR: ${{ secrets.DBT_ENV_SECRET_ANALITICO_SERVIDOR }}
+      DBT_ENV_SECRET_PRODUCAO_USUARIO: ${{ secrets.DBT_ENV_SECRET_PRODUCAO_USUARIO }}
+      DBT_ENV_SECRET_PRODUCAO_SENHA: ${{ secrets.DBT_ENV_SECRET_PRODUCAO_SENHA }}
+      DBT_ENV_SECRET_PRODUCAO_SERVIDOR: ${{ secrets.DBT_ENV_SECRET_PRODUCAO_SERVIDOR }}
+      DBT_PROFILES_DIR: .
 
     steps:
       - name: Checkout branch
