--- a/.github/workflows/rodar.yml
+++ b/.github/workflows/rodar.yml
@@ -24,21 +24,42 @@ jobs:
       DBT_ENV_SECRET_PRODUCAO_USUARIO: ${{ secrets.DBT_ENV_SECRET_PRODUCAO_USUARIO }}
       DBT_ENV_SECRET_PRODUCAO_SENHA: ${{ secrets.DBT_ENV_SECRET_PRODUCAO_SENHA }}
       DBT_ENV_SECRET_PRODUCAO_SERVIDOR: ${{ secrets.DBT_ENV_SECRET_PRODUCAO_SERVIDOR }}
-      DBT_PROFILES_DIR: .
 
     steps:
       - name: Checkout branch
         uses: actions/checkout@v2
 
+      - name: Docker login
+        env:
+          DOCKER_USER: ${{secrets.DOCKER_USER}}
+          DOCKER_SENHA: ${{secrets.DOCKER_SENHA}}
+          SLACK_WEBHOOK_URL: ${{secrets.SLACK_WEBHOOK_URL}}
+        run: docker login -u $DOCKER_USER -p $DOCKER_SENHA
+
+      - name: Receber imagem Docker
+        run: docker pull impulsogov/saude-mental-indicadores:latest
+
       - name: seed
-        uses: datacoves/dbt-coves-action@v1
-        with:
-          command: "dbt seed --full-refresh"
+        run: >
+          docker run dbt seed --full-refresh
+          -e DBT_ENV_SECRET_ANALITICO_USUARIO
+          -e DBT_ENV_SECRET_ANALITICO_SENHA
+          -e DBT_ENV_SECRET_ANALITICO_SERVIDOR
+          -e DBT_ENV_SECRET_PRODUCAO_USUARIO
+          -e DBT_ENV_SECRET_PRODUCAO_SENHA
+          -e DBT_ENV_SECRET_PRODUCAO_SERVIDOR
+          impulsogov/saude-mental-indicadores:latest
 
       - name: dbt run
-        uses: datacoves/dbt-coves-action@v1
-        with:
-          command: "dbt run"
+        run: >
+          docker run dbt run
+          -e DBT_ENV_SECRET_ANALITICO_USUARIO
+          -e DBT_ENV_SECRET_ANALITICO_SENHA
+          -e DBT_ENV_SECRET_ANALITICO_SERVIDOR
+          -e DBT_ENV_SECRET_PRODUCAO_USUARIO
+          -e DBT_ENV_SECRET_PRODUCAO_SENHA
+          -e DBT_ENV_SECRET_PRODUCAO_SERVIDOR
+          impulsogov/saude-mental-indicadores:latest
 
       - name: check
         uses: datacoves/dbt-coves-action@v1
@@ -46,14 +67,26 @@ jobs:
           command: "dbt-coves check --no-fix"
 
       - name: test
-        uses: datacoves/dbt-coves-action@v1
-        with:
-          command: "dbt test"
+        run: >
+          docker run dbt test
+          -e DBT_ENV_SECRET_ANALITICO_USUARIO
+          -e DBT_ENV_SECRET_ANALITICO_SENHA
+          -e DBT_ENV_SECRET_ANALITICO_SERVIDOR
+          -e DBT_ENV_SECRET_PRODUCAO_USUARIO
+          -e DBT_ENV_SECRET_PRODUCAO_SENHA
+          -e DBT_ENV_SECRET_PRODUCAO_SERVIDOR
+          impulsogov/saude-mental-indicadores:latest
 
       - name: generate docs
-        uses: datacoves/dbt-coves-action@v1
-        with:
-          command: "dbt docs generate"
+        run: >
+          docker run dbt docs generate
+          -e DBT_ENV_SECRET_ANALITICO_USUARIO
+          -e DBT_ENV_SECRET_ANALITICO_SENHA
+          -e DBT_ENV_SECRET_ANALITICO_SERVIDOR
+          -e DBT_ENV_SECRET_PRODUCAO_USUARIO
+          -e DBT_ENV_SECRET_PRODUCAO_SENHA
+          -e DBT_ENV_SECRET_PRODUCAO_SERVIDOR
+          impulsogov/saude-mental-indicadores:latest
 
       - name: deploy docs 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
