fix: :green_heart: Corrige erros na geração do contâiner.
Limita os diretórios montados como volume, garantindo que o diretório de pacotes instalados persista após a construção do contâiner. Remove a sugestão de associar a viaríavel de ambiente `DBT_PROFILES_DIR` ao diretório atual, o que, se implementado, gerava inconsistências com o local correto onde os arquivos de perfil são armazenados no contâiner.

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -23,6 +23,8 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
+packages-install-path: "dbt_packages"
+log-path: "logs"
 target-path: "target"  # directory which will store compiled SQL files
 clean-targets:         # directories to be removed by `dbt clean`
     - "target"
