chore: :bug: Remove aspas na definição do servidor, que gerariam erro se usadas.

--- a/.env.exemplo
+++ b/.env.exemplo
@@ -2,11 +2,11 @@
 
 
 # Credenciais de acesso ao banco analítico
-DBT_ENV_SECRET_ANALITICO_SERVIDOR="127.0.0.1"
+DBT_ENV_SECRET_ANALITICO_SERVIDOR=127.0.0.1
 DBT_ENV_SECRET_ANALITICO_USUARIO=maria
 DBT_ENV_SECRET_ANALITICO_SENHA=minha-senha-muito-longa-e-complexa
 
 # Credenciais de acesso ao banco de produção
-DBT_ENV_SECRET_PRODUCAO_SERVIDOR="0.0.0.0"
+DBT_ENV_SECRET_PRODUCAO_SERVIDOR=127.0.0.1
 DBT_ENV_SECRET_PRODUCAO_USUARIO=joao
 DBT_ENV_SECRET_PRODUCAO_SENHA=uma-outra-senha-ainda-mais-complexa-e-dificil
