--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -3,19 +3,13 @@
 # SPDX-License-Identifier: MIT
 
 
-# Name your project! Project names should contain only lowercase characters
-# and underscores. A good package name should reflect your organization's
-# name or the intended use of these models
 name: 'impulso_saude_mental'
 version: '0.1.0'
 config-version: 2
 
-# This setting configures which "profile" dbt uses for this project.
 profile: 'impulso-saude-mental'
 
-# These configurations specify where dbt should look for different types of files.
-# The `source-paths` config, for example, states that models in this project can be
-# found in the "models/" directory. You probably won't need to change these!
+# Caminhos para pastas com recursos
 model-paths: ["models"]
 analysis-paths: ["analysis"]
 test-paths: ["tests"]
@@ -23,14 +17,14 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
+# Caminhos para plugins, logs e arquivos compilados
 packages-install-path: "dbt_packages"
 log-path: "logs"
 target-path: "target"  # directory which will store compiled SQL files
 clean-targets:         # directories to be removed by `dbt clean`
     - "target"
 
-# Configuring models
-# Full documentation: https://docs.getdbt.com/docs/configuring-models
-# These settings can be overridden in the individual model files
+# Configuração dos modelos. Pode ser sobrescrito nos modelos específicos.
+# Ver: https://docs.getdbt.com/docs/configuring-models
 models:
   materialized: view
