--- a/.github/workflows/rodar.yml
+++ b/.github/workflows/rodar.yml
@@ -91,4 +91,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
           branch: gh-pages
-          folder: target
+          folder: docs
