--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -16,6 +16,7 @@ test-paths: ["tests"]
 seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
+docs-paths: ["docs"]
 
 # Caminhos para plugins, logs e arquivos compilados
 packages-install-path: "dbt_packages"
