feat(referencias): :sparkles: Filtra BPAi's apenas das referências ambulatoriais.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
     },
     "dbt.runModelCommandAdditionalParams": [
         "--profiles-dir ."
+    ],
+    "conventionalCommits.scopes": [
+        "referencias"
     ]
 }
