refactor(referencias): :truck: Renomeia modelos de referências ambulatoriais.
Muda o nome dos modelos para garantir que não haja conflito com nomes parecidos utilizados para CAPS.

--- a/models/ambulatorio_saude_mental/ambulatorio_atendimentos.yml
+++ b/models/ambulatorio_saude_mental/ambulatorio_atendimentos.yml
@@ -6,7 +6,7 @@
 version: 2
 
 models:
-  - name: atendimentos
+  - name: ambulatorio_atendimentos
     description: >
       Atendimentos de profissionais de referência em saúde mental (psicólogos e
       psiquiatras) em estabelecimentos selecionados, conforme registrado em
