feat(referencias): :sparkles: Adiciona modelo com atendimentos por hora dos profissionais.

--- a/models/sources/siasus.yml
+++ b/models/sources/siasus.yml
@@ -22,3 +22,10 @@ sources:
           Arquivo de disseminação dos Boletins de Produção Ambulatorial 
           individualizados (BPA-i) do Sistema de Informações Ambulatoriais do
           SUS (SIASUS).
+
+      - name: procedimentos_disseminacao
+        identifier: siasus_procedimentos_ambulatoriais
+        description: >
+          Arquivo de disseminação dos procedimentos do Sistema de Informações
+          Ambulatoriais do SUS (SIASUS), incluindo informações resumidas de
+          diversos documentos (BPA-i, BPA-c, RAAS-PS, RAAS-AD, APAC-P, APAC-S).
