refactor(referencias): :truck: Renomeia tabelas fontes e colunas.
Aplica alterações nos nomes de tabelas-fonte do *schema* `dados_publicos`  (algumas delas temporárias, a serem revertidas futuramente) e nomes de colunas para se adequar às mudanças implementadas de acordo com o Guia de Diretrizes do Banco de Dados da Impulso Gov.

--- a/models/ambulatorio_saude_mental/ambulatorio_atendimentos.yml
+++ b/models/ambulatorio_saude_mental/ambulatorio_atendimentos.yml
@@ -26,7 +26,7 @@ models:
           - "faixa_etaria_id"
           - "faixa_etaria_ordem"
         - columns:
-          - "profissional_cns"
+          - "profissional_id_cns"
       materialized: incremental
       persist_docs:
         relation: true
