--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "--profiles-dir ."
     ],
     "conventionalCommits.scopes": [
+        "caps",
         "referencias",
         "docs"
     ]
