--- a/seeds/properties.yml
+++ b/seeds/properties.yml
@@ -59,3 +59,43 @@ seeds:
         description: >
           Código do estabelecimento com atendimento de referência ambulatorial
           em saúde mental, segundo o SCNES.
+
+  - name: intervalos_tempo_servico
+    description: >
+      Lista categorias para classificar a duração do vínculo entre uma pessoa e
+      um serviço de saúde.
+    docs:
+      show: true
+    persist_docs:
+      relation: true
+      columns: true
+    config:
+      quote_columns: true
+      column_types:
+        id: "uuid"
+        minimo: "interval"
+        maximo: "interval"
+        descricao: "text"
+        ordem: "numeric"
+    columns:
+    - name: "id"
+      description: >
+        Identificador único da categoria de duração do vínculo entre pessoa e
+        serviço de saúde.
+    - name: "minimo"
+      description: >
+        Duração mínima do vínculo entre pessoa e serviço de saúde considerada
+        para enquadramento dentro da categoria (*intervalo fechado*).
+    - name: "maximo"
+      description: >
+        Duração a partir da qual o vínculo entre pessoa e serviço de saúde
+        deixa de ser enquadrado dentro da categoria (*intervalo aberto*).
+    - name: "descricao"
+      description: >
+        Descrição legível da categoria de duração do vínculo entre pessoa e
+        serviço de saúde.
+    - name: "ordem"
+      description: >
+        Valor sem significado intrínseco, mas que pode ser utilizado para
+        ordenar as categorias de duração do vínculo, levando em conta os
+        intervalos mínimo e máximo que as definem.
