fix: :bug: Evita compilar trecho com notação de macro.

--- a/macros/classificar_categorias/classificar_valores_binarios.yml
+++ b/macros/classificar_categorias/classificar_valores_binarios.yml
@@ -16,8 +16,10 @@ macros:
       ```sql
       SELECT
         -- ...,
+        {% raw %}
         {{ classificar_valores_binarios("nome_coluna_booleanos") }}
           AS nome_coluna_transformada
+        {% endraw %}
       -- ...
       ```
     docs:
