--- a/models/caps/_caps_usuarios_ativos_por_estabelecimento_resumo.yml
+++ b/models/caps/_caps_usuarios_ativos_por_estabelecimento_resumo.yml
@@ -6,8 +6,12 @@
 version: 2
 
 models:
-  - name: caps_usuarios_ativos_por_estabelecimento_resumo
+  - name: _caps_usuarios_ativos_por_estabelecimento_resumo
     description: >
+      *Modelo de uso interno do dbt**. Ver modelo 
+      [`caps_usuarios_ativos_por_estabelecimento_resumo`](https://impulsogov.github.io/saude-mental-indicadores/#!/model/model.impulso_saude_mental.caps_usuarios_ativos_por_estabelecimento_resumo)
+      para a versão final.
+
       Relaciona números gerais da composição do público dos CAPS, incluindo o
       total de usuários que tiveram o prontuário movimentado no período de
       referência; aqueles que tiveram movimentação do prontuário em alguma das
@@ -24,19 +28,21 @@ models:
       de Informações Ambulatoriais do SUS (SIASUS) e disponibilizados pelo
       Departamento de Informática do SUS (DATASUS) em seu FTP público.
     config:
-      alias: caps_usuarios_ativos_por_estabelecimento_resumo
+      alias: _caps_usuarios_ativos_por_estabelecimento_resumo
       enabled: true
-      indexes:
-        - columns:
-          - "id"
-          unique: true
-        - columns:
-          - "unidade_geografica_id_sus"
-          - "unidade_geografica_id"
-        - columns:
-          - "competencia"
-          - "periodo_id"
-      materialized: table
+      # indexes:
+      #   - columns:
+      #     - "id"
+      #     unique: true
+      #   - columns:
+      #     - "unidade_geografica_id_sus"
+      #     - "unidade_geografica_id"
+      #     - "estabelecimento_id_scnes"
+      #   - columns:
+      #     - "periodo_data_inicio"
+      #     - "periodo_id"
+      # materialized: table
+      materialized: view
       persist_docs:
         relation: true
       tags:
