feat(caps)!: :sparkles: Adicionar indicadores de usuários ativos (#5)
* feat: :sparkles: Adiciona macro para preencher colunas com o último valor não nulo.

* chore(caps): :wrench: Adiciona `caps` como escopo válido para commits.

* feat(caps): :card_file_box: Adiciona tabela com dados da RAAS como fonte.

Configura a tabela `dados_publicos.siasus_raas_psicossocial_disseminacao` como fonte de dados para transformações.

* feat: :sparkles: Adiciona macro para classificar a duração do vínculo com o serviço.

* feat(caps): :sparkles: Adiciona modelo com último envio de RAAS por município.

* docs: :memo: Documenta macro para classificar idades em faixas etárias.

* feat: :sparkles: Adiciona macro para classificar valores booleanos em categorias legíveis.

* feat(caps): :sparkles: Adiciona modelo para listar procedimentos realizados em CAPS.

* feat(caps): :sparkles: Adiciona modelo com datas do primeiro procedimento em CAPS

Modelo que lista, para cada combinação de usuário (identificado por chave criptografada a partir do Cartão Nacional de Saúde) e CAPS, a data do primeiro acolhimento inicial realizado e do primeiro procedimento de outra natureza realizado.

* feat(caps): :sparkles: Adiciona modelo com características dos usuários de CAPS e status de atividade por mês

* feat(caps): :sparkles: Adiciona modelo com quantidade de usuários por combinação de perfis.

Soma a quantidade de usuários em cada CAPS e mês que correspondem a cada combinação de perfil de faixa etária, sexo, raça/cor e tempo de vínculo com o serviço.

* fix: :bug: Evita compilar trecho com notação de macro.

* fix(caps): :ambulance: Corrige definição da conexão com a tabela de RAAS.

* feat(caps): :sparkles: Adiciona modelos resumindo o número e perfil dos usuários ativos em CAPS

* fix(caps): :bug: Evita duplicatas e incorpora colunas faltantes.

* feat: :sparkles: Adiciona macro para apensar nome dos estabelecimentos

* feat(caps): :sparkles: Adiciona macro p

--- a/models/sources/siasus.yml
+++ b/models/sources/siasus.yml
@@ -29,3 +29,10 @@ sources:
           Arquivo de disseminação dos procedimentos do Sistema de Informações
           Ambulatoriais do SUS (SIASUS), incluindo informações resumidas de
           diversos documentos (BPA-i, BPA-c, RAAS-PS, RAAS-AD, APAC-P, APAC-S).
+
+      - name: raas_psicossocial_disseminacao
+        identifier: _siasus_raas_psicossocial_disseminacao
+        description: >
+          Arquivo de disseminação dos Registros das Ações Ambulatorias de Saúde
+          - Psicossociais (RAAS-PS) do Sistema de Informações Ambulatoriais do
+          SUS (SIASUS).
