--- a/models/caps/usuarios_ativos/_caps_usuarios_ativos_por_estabelecimento_resumo.yml
+++ b/models/caps/usuarios_ativos/_caps_usuarios_ativos_por_estabelecimento_resumo.yml
@@ -28,6 +28,8 @@ models:
       de Informações Ambulatoriais do SUS (SIASUS) e disponibilizados pelo
       Departamento de Informática do SUS (DATASUS) em seu FTP público.
     config:
+      grants:
+        select: ['saude_mental_analistas']
       alias: _caps_usuarios_ativos_por_estabelecimento_resumo
       enabled: true
       # indexes:
