--- a/models/ultimas_competencias_disponiveis/raas_psicossocial_disseminacao_ultima_competencia.yml
+++ b/models/ultimas_competencias_disponiveis/raas_psicossocial_disseminacao_ultima_competencia.yml
@@ -13,6 +13,8 @@ models:
       (RAAS) do Sistema de Informações Ambulatoriais do SUS (SIASUS), para cada
       município.
     config:
+      grants:
+        select: ['saude_mental_analistas']
       alias: _raas_psicossocial_disseminacao_ultima_competencia
       enabled: true
       indexes:
