--- a/models/caps/usuarios_ativos/caps_usuarios_ativos.yml
+++ b/models/caps/usuarios_ativos/caps_usuarios_ativos.yml
@@ -13,6 +13,8 @@ models:
       de Informações Ambulatoriais do SUS (SIASUS) e disponibilizado pelo
       Departamento de Informática do SUS (DATASUS) em seu FTP público.
     config:
+      grants:
+        select: ['saude_mental_analistas']
       alias: _caps_usuarios_ativos
       enabled: true
       indexes:
