--- a/models/caps/usuarios_ativos/caps_usuarios_primeiro_procedimento.yml
+++ b/models/caps/usuarios_ativos/caps_usuarios_primeiro_procedimento.yml
@@ -18,6 +18,8 @@ models:
       de Informações Ambulatoriais do SUS (SIASUS) e disponibilizados pelo
       Departamento de Informática do SUS (DATASUS) em seu FTP público.
     config:
+      grants:
+        select: ['saude_mental_analistas']
       alias: _caps_usuarios_primeiro_procedimento
       enabled: true
       indexes:
