--- a/models/ambulatorio_saude_mental/ambulatorio_atendimentos_resumo_ultimo_mes.yml
+++ b/models/ambulatorio_saude_mental/ambulatorio_atendimentos_resumo_ultimo_mes.yml
@@ -16,7 +16,7 @@ models:
       pelo Departamento de Informática do SUS (DATASUS).
     config:
       grants:
-        select: ['saude_mental_analistas']
+        select: ['saude_mental_analistas', 'saude_mental_integracao']
       alias: referencias_atendimentos_resumo_ultimo_mes
       enabled: true
       indexes:
