--- a/models/caps/usuarios_ativos/caps_usuarios_ativos_perfil.yml
+++ b/models/caps/usuarios_ativos/caps_usuarios_ativos_perfil.yml
@@ -24,7 +24,7 @@ models:
       Departamento de Informática do SUS (DATASUS) em seu FTP público.
     config:
       grants:
-        select: ['saude_mental_analistas']
+        select: ['saude_mental_analistas', 'saude_mental_integracao']
       alias: caps_usuarios_ativos_perfil
       enabled: true
       indexes:
