--- a/models/ambulatorio_saude_mental/ambulatorio_atendimentos_resumo.yml
+++ b/models/ambulatorio_saude_mental/ambulatorio_atendimentos_resumo.yml
@@ -15,7 +15,7 @@ models:
       e disponibilizado pelo Departamento de Informática do SUS (DATASUS).
     config:
       grants:
-        select: ['saude_mental_analistas']
+        select: ['saude_mental_analistas', 'saude_mental_integracao']
       alias: referencias_atendimentos_resumo
       enabled: true
       # indexes:
