--- a/models/ambulatorio_saude_mental/ambulatorio_procedimentos_por_profissional_por_hora.yml
+++ b/models/ambulatorio_saude_mental/ambulatorio_procedimentos_por_profissional_por_hora.yml
@@ -16,7 +16,7 @@ models:
       Informática do SUS (DATASUS).
     config:
       grants:
-        select: ['saude_mental_analistas']
+        select: ['saude_mental_analistas', 'saude_mental_integracao']
       alias: ambulatorio_procedimentos_por_profissional_por_hora_ultimo_mes
       enabled: true
       indexes:
