--- a/models/caps/usuarios_ativos/_caps_usuarios_ativos_perfil.yml
+++ b/models/caps/usuarios_ativos/_caps_usuarios_ativos_perfil.yml
@@ -27,6 +27,8 @@ models:
       de Informações Ambulatoriais do SUS (SIASUS) e disponibilizados pelo
       Departamento de Informática do SUS (DATASUS) em seu FTP público.
     config:
+      grants:
+        select: ['saude_mental_analistas', 'saude_mental_integracao']
       alias: _caps_usuarios_ativos_perfil
       enabled: true
       materialized: view
