--- a/models/caps/usuarios_ativos/_caps_usuarios_ativos_por_estabelecimento_resumo.yml
+++ b/models/caps/usuarios_ativos/_caps_usuarios_ativos_por_estabelecimento_resumo.yml
@@ -29,7 +29,7 @@ models:
       Departamento de Informática do SUS (DATASUS) em seu FTP público.
     config:
       grants:
-        select: ['saude_mental_analistas']
+        select: ['saude_mental_analistas', 'saude_mental_integracao']
       alias: _caps_usuarios_ativos_por_estabelecimento_resumo
       enabled: true
       # indexes:
