--- a/models/caps/usuarios_ativos/caps_usuarios_ativos.yml
+++ b/models/caps/usuarios_ativos/caps_usuarios_ativos.yml
@@ -14,7 +14,7 @@ models:
       Departamento de Informática do SUS (DATASUS) em seu FTP público.
     config:
       grants:
-        select: ['saude_mental_analistas']
+        select: ['saude_mental_analistas', 'saude_mental_integracao']
       alias: _caps_usuarios_ativos
       enabled: true
       indexes:
